<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hfad.drawing.Settings">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="104dp"
        android:text="@string/thickness"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="104dp"
        android:background="@android:color/darker_gray"
        android:entries="@array/thickness_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="174dp"
        android:layout_height="128dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="141dp"
        android:onClick="onClickCanvas"
        android:text="@string/draw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clear_canvas"
        app:layout_constraintTop_toBottomOf="@+id/modeSpinner" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="48dp"
        android:text="@string/colour"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/darker_gray"
        android:entries="@array/color_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="56dp"
        android:text="@string/mode"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/modeSpinner"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/darker_gray"
        android:entries="@array/mode_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSpinner" />

    <Button
        android:id="@+id/clear_canvas"
        android:layout_width="174dp"
        android:layout_height="128dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="154dp"
        android:onClick="onClickClear"
        android:text="@string/clear_canvas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="192dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
